Fix open modal button z-index

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -42,6 +42,7 @@ body {
   position: absolute;
   top: 1rem;
   right: 1rem;
+  z-index: 1;
 }
 
 @media (hover) {
